--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':android-http')
     compile project(':SAXRSSReader')
+    compile project(':greendao-1.3.7')
 }
