--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 22 13:10:38 CEST 2014
-sdk.dir=C\:\\Users\\Marco\\AppData\\Local\\Android\\android-studio\\sdk
+#Wed Oct 22 18:40:37 CEST 2014
+sdk.dir=C\:\\Users\\Daniel\\AppData\\Local\\Android\\android-studio1\\sdk
